fixed problems v1.1